--- a/gb/ncid277_5.md
+++ b/gb/ncid277_5.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ripamf2991/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ripamf2991/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737713.md#1" target="_blank">路透：中纪委多年前幕后推动引渡条例</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190617233359100484-600x400-150x120.jpg" align ="left"></a>港府修订《逃犯条例》（也称引渡条例），引爆“反送中”抗议活动。尽管林郑月娥坚称，她自己而非北京是修例的主要推动者。但路透社的调查披露了一个更为复杂的故事，中共中纪委早在多年前就在背后推动建立引渡法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 7:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737558.md#1" target="_blank">【新闻看点】太空兵出世 美首创新兵种的背后</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737558.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e28a3eba7f0e2e_ttl7dayfm3_DSC09345-150x120.jpg" align ="left"></a>12月20日，川普签署国防法案，美国又创立了一个70年以来的新兵种。美国这个具有里程碑意义的历史动作，引起了各方的高度关注......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 5:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737505.md#1" target="_blank">俞正声、俞强声亲属文革时被迫害死六七人</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fc0a04d04d9e0fb6aeb30304ca0976f7-150x120.jpg" align ="left"></a>中共间谍王立强投奔自由社会后，此前出逃美国的中共最大间谍俞强声再次受到外界关注。他家人在文革时曾遭到中共当局残酷迫害，母亲被关进监狱、妹妹被迫害致死等往事，再次被提起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 4:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737343.md#1" target="_blank">控制核武 川普政府正式邀北京开始军备会谈</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737343.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1781184-1-150x120.jpg" align ="left"></a>美国川普（特朗普）政府周五（12月20日）表示，已正式邀请中国（中共）开启军备控制会谈。白宫希望，这是涵盖美国、俄罗斯和中国三方核武器协议的第一步。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737305.md#1" target="_blank">马云卸任后 在湖北获“新职”</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/181212095028100484-150x120.jpg" align ="left"></a>马云卸任阿里巴巴董事局主席后，日前获得中共湖北省政府“经济顾问”的头衔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 12:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737361.md#1" target="_blank">安全担忧 美海军限制使用抖音海外版</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8Y2-150x120.jpg" align ="left"></a>本周早些时候，美国海军禁止在政府提供的移动设备上使用抖音海外版TikTok，并称这个短视频应用会带来“网络安全威胁”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737218.md#1" target="_blank">美防长：美在中东的行动不影响聚焦中俄</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737218.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N641W-150x120.jpg" align ="left"></a>美国国防部长马克·埃斯珀(Mark Esper) 周五（12月20日）表示，美军将继续集中精力应对中共和俄罗斯的安全挑战，不会因为中东和其他地区局势而分散注意力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11736961.md#1" target="_blank">蓬佩奥：中国人民正在抵制共产党</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11736961.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/190621222928100699-150x120.jpg" align ="left"></a>美国国务卿蓬佩奥（Mike Pompeo）在周三（12月18日）表示，中国人民与中国共产党不同。中国人民希望生活在自由的社会，也不支持共产党。他们正在抵制中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11736367.md#1" target="_blank">台湾大选倒数3周 美国立法反制中共介入</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11736367.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-505204448-150x120.jpg" align ="left"></a>台湾2020总统大选是一场台湾人捍卫主权与民主自由体制的保卫战。美国参众两院授权情报机构反制中国（中共）干预台湾选举的行动。本周六国民党统总候选人韩国瑜大本营高雄同时迎来挺韩、罢韩两场大游行。美国驻台官方机构罕见高调向美国公民发出安全警讯，台湾总统蔡英文亦于脸书呼吁民众理性、和平地表达诉求，避免冲突发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:29 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11736488.md#1" target="_blank">客机降香港遭拒 传中共军机拦截要求远离澳门</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11736488.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N57V5-600x400-1-150x120.jpg" align ="left"></a>习近平访澳门期间，澳门安保措施极其严密。有消息说，日前一架由日本飞往印尼的私人客机发生故障，要求降落香港遭到拒绝，中共军方甚至派出两架军机拦截，要求客机与澳门保持100公里距离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11736290.md#1" target="_blank">云南红河州原公安局长落马 曾被海外追查</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11736290.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/xuyang-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>履新10个月后，中共云南省迪庆州委副书记许洋“涉嫌严重违纪违法”被查。许洋曾任红河州公安局局长、楚雄州楚雄市公安局局长多年，因参与迫害法轮功学员被海外组织追查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 7:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11735851.md#1" target="_blank">传习近平不去达沃斯 刘鹤1月赴美签协议</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11735851.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/GettyImages-909152798-150x120.jpg" align ="left"></a>知情人士对彭博社表示，习近平不打算参加今年1月的达沃斯世界经济论坛，而中方官员透露，刘鹤将在明年1月赴美签署美中第一阶段贸易协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 5:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11735836.md#1" target="_blank">习近平1个多月第三次见林郑 郑若骅在场</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11735836.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c9bc9efc2af3f02a3736f0494ff4c689@1200x1200-150x120.jpg" align ="left"></a>香港特首林郑月娥在短短的一个半月内三次面见了习近平，随行的包括主责修例的保安局局长李家超及受伤的律政司司长郑若骅等人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11735839.md#1" target="_blank">川习通电话 川普：正在安排正式签贸易协议</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11735839.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/GettyImages-872031456-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周五（12月20日）表示，他与中国国家主席习近平就贸易、香港和朝鲜问题进行了交谈，并获得“进展”。川普未提供更多细节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 2:51 AM							</td></tr>
@@ -20,22 +31,9 @@
 2.克鲁兹：弹劾案已崩溃 民主党阵脚大乱
 在众议院投票通过指控川普（特朗普）总统“滥用权力”和“阻碍国会”弹劾条款的翌日.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733207.md#1" target="_blank">【直播回放】台湾副总统候选人电视政见会</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733207.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019122025-150x120.jpg" align ="left"></a>12月20日，台湾将举行中华民国第15任副总统候选人电视政见发表会。新唐人电视台和《大纪元时报》将进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 8:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734831.md#1" target="_blank">美媒：中共首艘自制航母是漂浮的纸老虎？</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734831.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-959767396-150x120.jpg" align ="left"></a>中共第二艘航母暨第一艘自制航母于12月17日正式服役。尽管中共媒体吹嘘它算是全球最先进的航母之一，但有美国媒体质疑，它可能只是海上漂浮的纸老虎......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 3:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734083.md#1" target="_blank">澳门警方在习抵达前发特别通知 阻港人入境</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734083.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1904271214562188-150x120.jpg" align ="left"></a>习近平18日抵达澳门，出席包括澳门主权移交20周年在内的系列活动。澳门警方如临大敌，部署严密的安保措施。澳门警方还发出特别通知，禁止香港社会民主连线成员梁国雄等4人入境。这份警方通知被曝光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 1:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734291.md#1" target="_blank">选战倒计时 台立委候选人高嘉瑜谈中共渗透</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PO_X6051-150x120.jpg" align ="left"></a>在选战进入最后倒计时，今天（12月20日），台湾民进党立委候选人高嘉瑜在东湖路口向沿路市民拜票。期间，她接受了大纪元记者的采访，她谈到了她的参选理念及对中共渗透的看法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 1:07 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734298.md#1" target="_blank">【思想领袖】美前议长：中共是最大威胁</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734298.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1ed68a8d3ccaa_ttl7dayz6q______2019-12-19___7.24.27-150x120.jpg" align ="left"></a>美国会众议院议长的纽特·金里奇 （Newt Gingrich）2019年10月份接受了英文《大纪元时报》资深记者 #杨杰凯 （Jan Jekielek）的采访。他说，共产党统治下的中国是美国最大的威胁，为什么呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733260.md#1" target="_blank">【新闻看点】人人留影 中共监控网世界独有</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733260.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140216591758-150x120.jpg" align ="left"></a>习近平近日访问澳门，当地管控空前，外界质疑，澳门可能已经成了“秘密警察社会”。不过澳门的这些措施，跟中国大陆相比还是相形见绌，小巫见大巫。《纽约时报》指出，中国正在逐步整合新旧科技，加强对人民的监控，使地方公安权力越来越大，如同是一个小型的国家安全局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734074.md#1" target="_blank">英国上议院会议 医生斥港警对救援人员施暴</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734074.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/12-150x120.jpeg" align ="left"></a>12月18日下午，由“香港监察”（Hong Kong Watch）赞助人、英国利物浦奥尔顿勋爵（Lord Alton of Liverpool）在英国上议院举行会议上，听取在英国医生讲述港府侵犯医护人员等违背国际原则的行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733758.md#1" target="_blank">隐瞒员工接受中共资助 美研究所被罚550万</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Van_Andel_Institute-150x120.jpg" align ="left"></a>美国司法部周四（12月19日）宣布，密歇根州一家研究所因未能向美国当局透露两名研究人员接受中共政府拨款，而违反联邦法规，其与政府达成550万美元的和解协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:03 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733827.md#1" target="_blank">中共黑客或卷土重来 网上骂脏话自曝身份</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733827.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-909244318-600x400-150x120.jpg" align ="left"></a>最新报告显示，过去两年来，一个被认为消失的与中国（中共）政府有关联的黑客组织，一直在攻击外国公司和政府机构，包括美国、英国、法国、德国和意大利等十个国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 8:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733412.md#1" target="_blank">从公益零分到连续获奖 范冰冰洒泪：好久不见</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733412.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-957419286-150x120.jpg" align ="left"></a>在去年中共官方发布的《中国影视明星社会责任研究报告》中，陷入逃税风波的范冰冰以零分排在中港两地百位明星艺人倒数第一。但随着中共喉舌一改口诛笔伐范冰冰“将公益活动作为挽救自己事业星途的‘洗白器’”的调门，范冰冰近日连续获得公益奖。面对如此不同的境遇，范冰冰不禁洒泪表示：“真的好久不见！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 7:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11731502.md#1" target="_blank">四大原因 北京被迫同意第一阶段贸易协议</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11731502.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1152458129-600x400-1-150x120.jpg" align ="left"></a>美中贸易战开打逾一年半后，双方终于达成了第一阶段的贸易文本协议，等待双方代表签署。中共被指对此作出巨大让步，那么中共让步的背后原因是什么呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 5:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11732995.md#1" target="_blank">不惧中共打压 波特王蔡英文合拍第二部片发布</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11732995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/24a8ed573d1111bad553a11fcce20174-150x120.jpg" align ="left"></a>网路名人“波特王”日前与中华民国总蔡英文拍片，中国合作企业徐州自由自在网络科技有限公司要求不能出现“总统”，双方因此解约。波特王与蔡总统合作拍的第二只片12月19日公布，他在高雄担任街访活动主持人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11735219.md#1" target="_blank">习近平澳门讲话出现口误 央视急下令勿重播</a><br></h3>正在澳门访问的习近平今（20日）早讲话时一度出现口误，错将澳门说成香港。中共新华社发新闻稿进行纠正。大陆独立记者高瑜在推特透露，央视发紧急通知提醒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 8:07 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733936.md#1" target="_blank">【热点互动】打造金融中心 北京拿澳门作秀？</a><br></h3>周三（12/18）习近平抵达澳门访问。澳门安保空前严厉，轻轨停驶，多家港媒记者被拒入境，外传中共有意给予澳门优惠政策，将其打造成金融中心。
-
-不过在习访问前夕， 国际评级机构惠誉刚把澳门评级展望降至“负面”。 中共的“优惠政策”能把澳门变成香港吗？ 澳门是“一国两制”成功的范例吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 8:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733354.md#1" target="_blank">两岸密使 叶选宁牵线台湾官员密会杨尚昆</a><br></h3>中共总政联络部前部长叶选宁、台湾总统府前资政曾永贤先后去世后，他们从1992年开始担任“两岸密使”的事实被证实。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 6:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733311.md#1" target="_blank">国际人权组织吁加拿大惩罚中共电视台</a><br></h3>总部位于香港和欧洲的人权组织“保障卫士（Safeguard Defenders）”向加拿大广播电视和电信委员会（CRTC）提出了投诉，并呼吁加拿大政府使用《腐败外国官员的受害者法》——加拿大版的《马格尼茨基法》，去惩罚那些负责广播这种认罪供词视频的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11736394.md#1" target="_blank">【翻墙必看】林郑丈夫对中共发出无声抗议的背后</a><br></h3>澳门主权移交20周年，19日晚在东亚运动会体育馆举行文艺晚会，香港特首林郑月娥同丈夫林兆波都有出席。现场播放《歌唱祖国》时，当全场高歌拍掌时，唯独林兆波木然站立不配合的一幕引发各界热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737039.md#1" target="_blank">郴州电视台台长与政法委书记联手敛财</a><br></h3>中共湖南省郴州市广播电视台前台长张春阳被指与亲家、前政法委书记刘志伟合谋敛财，共涉金额数百万元人民币。日前，张春阳案开庭审理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 6:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11736935.md#1" target="_blank">三商人实名举报：江西前副省长索贿上亿元</a><br></h3>近日，中共江西省前副省长、赣州市委书记、江西省人大副主任史文清，被当地三名商人公开实名向中纪委举报，指史大肆敛财，索贿上亿元（人民币，下同）的黄金或现金。此外，史文清还被举报包养多名情妇等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11736741.md#1" target="_blank">题材敏感？《一级指控》疑遭中方施压禁上映</a><br></h3>港产片《一级指控》因题材涉指控官商勾结，疑因遭到中方压力，原订于今日（12月21日）起一连三日在港K11 Art House戏院上映的优先场突然被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 2:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ripamf2991/djy/blob/master/gb/ncid277_5.md#1<br><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ripamf2991/djy/blob/master/gb/ncid277_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_5.htm">http://www.epochtimes.com/gb/ncid277_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
