--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -17,7 +17,7 @@
 
 “老鼠是今年突然特别多，我们这八九月份开始多起来，六七月份时是其它地方多，还没有到我们这，一片一片地多起来了。在野地里.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank">鼠疫慌 京蒙之间设三道防线 河北现“通知”</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/EJ7uJQMUYAAz_e2-150x120.jpeg" align ="left"></a>内蒙、甘肃等地早些时间已爆发鼠疫，但当局掩盖真相，人心惶恐。目前内蒙已接近草木皆兵，车站、火车站、机场、医院都要检查体温。有网上消息称，目前很多村庄已经被完全封锁，村民不许进出，村庄通讯也遭切断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 3:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/11/21/n11670300.md#1" target="_blank">研究：韩国入冬后空气污染物八成来自中国</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/11/21/n11670300.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/000_1A11XD-150x120.jpg" align ="left"></a>韩日中三国对大气污染物流动的共同研究显示，韩国境内有高达三成的细悬浮污染物（PM2.5）来自中国，入冬后这个数字更飙高至八成。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 10:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/6/n11705039.md#1" target="_blank">佛山山火持续24小时 火势随风力加大蔓延</a><br></h3>12月5日13时53分，广东省佛山市高明区荷城街道凌云山发生山火，大火烧了整整一天（24小时），到6日火势扩大，目前火还没有灭并随风力加大蔓延。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/6/n11704994.md#1" target="_blank">黔高速37车连环撞23人伤 有人颅脑损伤</a><br></h3>12月6日上午8时20分左右，遵蓉高速公路（贵州遵义至四川成都）在遵义习水县路段，疑因大雾和路面结冰湿滑等原因，导致37车连环追撞，至少23人受伤送院，有人重度颅脑损伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/5/n11702307.md#1" target="_blank">浏阳烟花厂爆炸7死 厂房成平地 汽车炸变形</a><br></h3>昨日（12月4日），湖南长沙浏阳市澄潭江镇碧溪烟花制造有限公司石下工区发生爆炸后，已致7人死13人受伤。今日（12月5日）有消息指，当时厂房炸成废墟，面包车都被炸得扭曲变形，现场还升起蘑菇云状黑烟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/5/n11701869.md#1" target="_blank">广东一木材厂着火延烧3栋民宅 现场有油罐</a><br></h3>12月5日早上9点30分许，广东省清远市清城区一木材厂发生火灾，着火面积约700平方米，并延烧到隔壁的三栋居民楼。同时，现场有三只油罐。但着火原因依然不明。
